# coldspot

./: .gitignore  CMakeLists.txt  README.md  clion_code_style_settings.xml
src-test/jvm/: EnvironmentTest.cpp  InterpreterTest.cpp
src/java/: main.cpp
src/jvm/: Array.cpp  Array.hpp  Constants.cpp  Constants.hpp  Environment.hpp  Error.hpp  Global.hpp  JDKHandler.hpp  LibraryBinder.cpp  LibraryBinder.hpp  Logging.hpp  Monitor.cpp  Monitor.hpp  NativeCall.cpp  NativeCall.hpp  Object.cpp  Object.hpp  Options.hpp  Type.hpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp  utf16_string.cpp  utf16_string.hpp  utf8_string.cpp  utf8_string.hpp
src/jvm/class/: Class.cpp  Class.hpp  ClassLoader.cpp  ClassLoader.hpp  ExceptionHandler.hpp  Field.cpp  Field.hpp  Global.hpp  LocalVariableInfo.hpp  Method.cpp  Method.hpp  MethodDebugInfos.hpp  PrimitiveClass.cpp  PrimitiveClass.hpp  RunTimeConstantPoolEntries.hpp  Signature.hpp
src/jvm/classfile/: AccessFlags.hpp  AttributeInfos.cpp  AttributeInfos.hpp  AttributeSubtypes.cpp  AttributeSubtypes.hpp  ClassFile.cpp  ClassFile.hpp  ClassFileReader.cpp  ClassFileReader.hpp  ConstantPoolEntries.hpp  FieldInfo.cpp  FieldInfo.hpp  Global.hpp  MethodInfo.cpp  MethodInfo.hpp
src/jvm/common/: Global.hpp  HashMap.hpp  Hashable.hpp  List.hpp  Memory.hpp  Pair.hpp  SmartArray.hpp  String.cpp  String.hpp  StringBuilder.hpp  UTF16String.cpp  UTF16String.hpp  dynamic_stack.hpp  dynarray.hpp  fixed_stack.hpp  heap.hpp  local.hpp
src/jvm/execution/: Executor.cpp  Executor.hpp  Frame.hpp  Global.hpp  Instructions.hpp  Interpreter.cpp  (+1 more)
(+96 files in other folders)
